# OriginFD

./: .build-trigger  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_DEPLOYMENT_CHECKLIST.md  AI_Integration_Comprehensive_Review.md  AI_QUICK_REFERENCE.md  ARCHITECTURAL_IMPROVEMENTS_SUMMARY.md  COMPONENT_LIFECYCLE_VALIDATION.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_ORGANIZED.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_STANDARDS.md  Dockerfile  LIFECYCLE_TESTING_PLAN.md  LOCAL_DEVELOPMENT_SETUP.md  Makefile  ODL-SD UI_UX Challenges and Strategy Report_OpenAI.md  ODL_SD AI Architecture_v_1_1.md  ODL_SD_Monetisation_commercial_policy_v_1_2.md  ODL_SD_User_and_Access Structure.txt  ODL_SD_additional components_1_100.json  ODL_SD_components_library.txt  ODL_SD_v_4_1_component management.md  OriginFD_Canonical Development Guide.md  README.md  SETUP.md  UI_LIFECYCLE_ANALYSIS.md  UI_LIFECYCLE_MANAGEMENT_ANALYSIS.md  USER_PROFILE_ENGAGEMENT_ANALYSIS.md  alembic.ini  cloudbuild.yaml  docker-compose.prod.yml  docker-compose.yml  index.html  main.py  odl_sd_ui_guidelines_md_v_1.md  odl_sd_v41_spec.md  package.json  (+9 more)
.github/workflows/: api-client-sync.yml  api-contract.yml
AllElectric_Browser/: index.html  index2.html
OriginFD/: token.txt
OriginFD/.claude/: settings.local.json
OriginFlow/.claude/: settings.local.json
apps/web/: .env.example  .env.local.example  Dockerfile  next.config.mjs  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.d.ts  vitest.setup.ts
apps/web/app/: globals.css  layout.tsx  providers.tsx
apps/web/prisma/: schema.prisma
apps/web/public/: styles.css  sw.js
apps/web/scripts/: seed-components.ts
apps/web/src/lib/: db.ts  (+6 more)
apps/web/tests/: new-project-modal.spec.ts
docs/: api-client-generation.md
docs/lifecycle/: FE-Contract.md  Migration-Guide.md  Quickstart.md  Testing-Matrix.md
scripts/: api-prestart.ps1  api-seed-all.ps1  api-test-core.ps1  check-dependencies.py  docker-build-analysis.sh  generate-api-client.js  migrate_lifecycle_audit_to_orm.py
services/: __init__.py
services/api/: Dockerfile  alembic.ini  auth_api.py  database_api.py  deps.py  main.py  media_redaction.py  mypy.ini  odl_sd_api.py  prestart.py  requirements.txt  simple_components.py  simple_db_api.py  start.sh  test_api.py  test_component_api.py
services/api/alembic/: env.py
services/api/core/: __init__.py  auth.py  config.py  database.py  dependencies.py  logging_config.py  performance.py  permissions.py  redis_config.py  role_config.py
services/api/domain/: lifecycle_catalog.py  lifecycle_hooks.py  lifecycle_service.py  lifecycle_view.py
services/api/models/: __init__.py  base.py  component.py  document.py  inventory_record.py  lifecycle.py  project.py  supplier.py  tenant.py  user.py
services/api/odl_sd/: __init__.py  document_generator.py  schemas.py
services/api/seeders/: __init__.py  __main__.py  lifecycle_seeder.py
services/commerce_core/: __init__.py  escrow_milestones.py  fee_calculation.py  payout_ledger.py  psu_metering.py
services/model_registry/: __init__.py  api.py  models.py  registry.py  test_model_registry.py
services/orchestrator/: Dockerfile  __init__.py  graph_store.py  main.py  requirements.txt  simple_phase1_test.py  start.sh  test_graph_embeddings.py  test_phase1_integration.py  test_phase2_agents.py  test_tool_registry_dynamic.py
services/orchestrator/agents/: agent_manager.py  base_agent.py  design_engineer_agent.py  sales_advisor_agent.py
services/orchestrator/api/: __init__.py  graph_store_dependency.py
services/orchestrator/memory/: __init__.py  cag_store.py  episodic.py  graph_rag.py  semantic.py
services/orchestrator/planner/: __init__.py  critic.py  mock_scenarios.json  mock_trace.json  model_selector.py  orchestrator.py  planner.py  policy_router.py  region_router.py
services/orchestrator/tools/: component_tools.py  generate_sdk.py  registry.py
services/workers/: Dockerfile  main.py  requirements.txt
tests/: factories.py  test_parse_datasheet_tool.py  test_patch_utils.py  test_region_router.py
tests/api/: test_approvals_usage_event.py  test_component_integration.py  test_documents_patch.py  test_orchestrator_callbacks.py  test_router_mounting.py
tests/api/_utils/: sqlite_harness.py
tests/api/documents/: conftest.py  test_export.py  test_patch_endpoint.py  test_project_document.py
tests/api/lifecycle/: test_catalog_shape.py  test_gate_updates.py  test_lifecycle_view.py  test_models_schema.py  test_project_lifecycle.py  test_seeder.py
tests/api/projects/: test_create_project.py  test_gate_approvals.py  test_lifecycle_api_smoke.py  test_lifecycle_contract.py  test_lifecycle_edge_gates.py
tests/integration/: test_api_endpoints.py
tests/legacy/: test_gate_approvals.py
tests/legacy/alembic_versions_backup/: 752df9eaede8_add_component_management_schema.py  8d6c0a521db0_create_lifecycle_tables.py  b8f4a5b1cd23_add_primary_document_reference.py  (+1 more)
tests/orchestrator/: test_tasks.py
tools/: ops.py  paths.py
(+159 files in other folders)
